category CRUD complete

--- a/views/categories_list.pug
+++ b/views/categories_list.pug
@@ -8,5 +8,5 @@ block content
       li.list-group-item
         a(href=category._id)= category.name
 
-  form(action="", method="post") 
-    button(class="btn bg-primary text-light" type="submit") Add new category 
+    a(href='/category/new')
+      button(class="btn bg-primary text-light" type="button") Add new category 
