--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -9,6 +9,6 @@ block content
 
   ul 
     li 
-      a(href=category._id + "/update") Update category
+      a(href='/' + category.url + "/update") Update category
     li 
-      a(href=category._id + "/delete") Delete category
+      a(href='/' + category.url + "/delete") Delete category
