age categories CRUD wip

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,4 +16,12 @@ html
       crossorigin="anonymous"
     )
   body
+
+    nav(class="navbar navbar-expand-lg bg-body-secondary")
+      ul(class="navbar-nav me-auto column-gap-3")
+        li.navbar-item 
+          a(href='/category/all' class="text-decoration-none") Categories
+        li.navbar-item 
+          a(href='/ageCategory/all' class="text-decoration-none") Age categories
+
     block content
