--- a/views/age_category_list.pug
+++ b/views/age_category_list.pug
@@ -9,4 +9,4 @@ block content
         a(href=ageCategory._id)= ageCategory.name
 
     a(href='/ageCategory/new')
-      button(class="btn bg-primary text-light" type="button") Add new category 
+      button(type="button" class="border-2 border-solid border-indigo-600 rounded p-2") Add new category 
