--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -4,7 +4,7 @@ block content
 
   h2=title
 
-  form(action="", method="post", class="container")
+  form(action="", method="post")
     
     label.row(for="name") Category name
       input#name(type="text", name="name", value=category.name)
@@ -19,4 +19,4 @@ block content
     
       ul 
       each error in errors
-        li #{error.path}: #{error.msg} 
+        li #{error.path}: #{error.msg}
