--- a/views/age_category_detail.pug
+++ b/views/age_category_detail.pug
@@ -5,10 +5,10 @@ block content
   h1=title
   h2=ageCategory.name
 
-  span #{ageCategory.min}-#{ageCategory.max} years old
+  span #{ageCategory.min}-#{ageCategory.max} years old group
 
   ul 
     li 
-      a(href='/' + ageCategory.url + "/update") Update age category 
+      a(href=ageCategory.url + "/update") Update age category 
     li 
-      a(href='/' + ageCategory.url + "/delete") Delete age category 
+      a(href=ageCategory.url + "/delete") Delete age category
