--- a/views/age_category_delete.pug
+++ b/views/age_category_delete.pug
@@ -2,14 +2,14 @@ extends layout
 
 block content 
 
-  if category 
+  if ageCategory 
     span There are items for this age category. Please delete them before. 
     ul
       each item in items 
         li
-          a(href=item.url)= item.name (item.min - item.max years old)
+          a(href=item.url) #{item.name} (#{ageCategory.min} - #{ageCategory.max} years old)
 
   else
     span There are no items for this category of age. You can delete it safely.
     form(method='post' action='')
-      button(type='submit') Delete
+      button(type='submit' class="btn btn-outline-primary") Delete
