--- a/views/age_category_form.pug
+++ b/views/age_category_form.pug
@@ -4,18 +4,21 @@ block content
 
   h2=title
 
-  form(action="", method="post")
-    
-    label.row(for="name") Age category 
-      input#name(type="text", name="name", value=ageCategory.name)
-    
-    label.row(for="min") Description 
-      input#min(type="textarea", name="min" value=ageCategory.min)
-    
-    label.row(for="max") Description 
-      input#max(type="textarea", name="max" value=ageCategory.max)
+  form(method="post" class="container-sm") 
 
-    button.row(type="submit") Submit changes
+    div.mb-3
+      label.row(for="name" class="form-label") Age category 
+      input#name(type="text", name="name" class="form-control border-1 rounded-2" value=ageCategory ? ageCategory.name : null)
+
+    div.mb-3
+      label.row(for="min" class="form-label") Minimum age
+      input#min(type="number", name="min" class="form-control border-1 rounded-2" value=ageCategory ? ageCategory.min : null)
+    
+    div.mb-3
+      label.row(for="max" class="form-label") Maximum age 
+      input#max(type="number", name="max" class="form-control border-1 rounded-2" value=ageCategory ? ageCategory.max : null)
+
+    button.row(type="submit" class="btn btn-outline-primary") Submit changes
 
   if errors
     span The following form fields contain validation errors: 
