--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,14 +5,21 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
-  script(src="https://cdn.tailwindcss.com")
-  body(class="mx-8")
+  link(
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+    crossorigin="anonymous"
+  )
+  body
 
     nav
-      ul(class="flex flex-row gap-x-8 text-indigo-600")
-        li
-          a(href='/category/all') Categories
-        li
-          a(href='/ageCategory/all') Age categories
+      ul.nav
+        li.nav-item
+          a(href='/category/all' class="nav-link") Categories
+        li.nav-item
+          a(href='/ageCategory/all' class="nav-link") Age categories
+        li.nav-item
+          a(href='/items/all' class="nav-link") Figurines 
 
     block content
