--- a/views/figurine_list.pug
+++ b/views/figurine_list.pug
@@ -17,3 +17,6 @@ block content
           span $#{item.price}
           span=item.age
           span=item.category
+
+  a(href='/item/new')
+    button(type="button" class="btn btn-outline-primary") Add new item 
