--- a/views/age_category_form.pug
+++ b/views/age_category_form.pug
@@ -2,9 +2,8 @@ extends layout
 
 block content 
 
-  h2=title
-
-  form(method="post" class="container-sm") 
+  h1=title
+  form(method="post" class="container-sm mx-4") 
 
     div.mb-3
       label.row(for="name" class="form-label") Age category 
