--- a/views/category_list.pug
+++ b/views/category_list.pug
@@ -4,10 +4,10 @@ block content
   h1 Categories 
 
   div.container 
-    ul(class="list-group")
+    ul(class="list-group mb-4")
       each category in categories 
         li(class="list-group-item")
-          a(href=category._id)= category.name
+          a(href=category.id)= category.name
 
     a(href='/category/new')
       button(type="button" class="btn btn-outline-primary") Add new category 
