--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html
 
   div(class="container-fluid d-flex flex-row") 
 
-    nav(class="col-1")
+    nav(class="col-1 mr-3")
       ul(class="nav d-flex flex-column")
         li.nav-item
           a(href='/category/all' class="nav-link") Categories
@@ -22,6 +22,6 @@ html
           a(href='/ageCategory/all' class="nav-link") Age categories
         li.nav-item
           a(href='/item/all' class="nav-link") Figurines 
-
+    
     main
-    block content
+      block content
