--- a/views/figurine_form.pug
+++ b/views/figurine_form.pug
@@ -2,15 +2,13 @@ extends layout
 
 block content 
 
-  h1=Title
-
-  form(action="" method="POST" class="form d-flex flex-column p-2")
+  form(action="" method="POST" class="form d-flex flex-column gap-2" enctype="multipart/form-data")
 
     label(for="name" class="form-label") Name 
-    input(type="text" name="name" class="form-control" value=item ? item.name : null)
+      input(type="text" name="name" class="form-control" value=item ? item.name : null)
     
     label(for="description" class="form-label") Description 
-    textarea(name="description" class="form-control" value=item ? item.description : null)
+      textarea(name="description" class="form-control" value=item ? item.description : null)
 
     label(for="age" class="form-label") Age
     select#age(name="age" class="form-select")
@@ -22,24 +20,24 @@ block content
       each category in categoryOptions 
         option(value=category.id) #{category.name}
 
-    div Dimensions 
+    fieldset(class="d-flex p-0 m-0 flex-column gap-2 container") Dimensions 
       label(for="description" class="form-label") Height 
-      input#height(type="number" step=0.01 name="dimensions.height" class="form-control" value=item && item.dimensions ? item.dimensions.height : null)
+        input#height(type="number" step=0.01 name="dimensions.height" class="form-control" value=item && item.dimensions ? item.dimensions.height : null)
       label(for="width" class="form-label") Width 
-      input#width(type="number" step=0.01 name="dimensions.width" class="form-control" value=item && item.dimensions ? item.dimensions.width : null)
+        input#width(type="number" step=0.01 name="dimensions.width" class="form-control" value=item && item.dimensions ? item.dimensions.width : null)
       label(for="depth" class="form-label") Depth 
-      input#depth(type="number" step=0.01 name="dimensions.depth" class="form-control" value=item && item.dimensions ? item.dimensions.depth : null)
+        input#depth(type="number" step=0.01 name="dimensions.depth" class="form-control" value=item && item.dimensions ? item.dimensions.depth : null)
       label(for="weight" class="form=label") Weight
-      input#weight(type="number" step=0.01 name="weight" class="form-control" value=item ? item.weight : null)
+        input#weight(type="number" step=0.01 name="weight" class="form-control" value=item ? item.weight : null)
     
     label(for="itemCountLeft" class="form-label") Items in store
-    input#itemCountLeft(type="number" min=0 step=1 name="itemCountLeft" class="form-control")
+      input#itemCountLeft(type="number" min=0 step=1 name="itemCountLeft" class="form-control")
     
     label(for="price" class="form-label") Price 
-    input#price(type="number" min=0 step=0.01 name="price" class="form-control")
+      input#price(type="number" min=0 step=0.01 name="price" class="form-control")
 
     label(for="imageUrl" class="form-label")
-    input#imageUrl(type="file" name="imageUrl" class="form-control")
+      input#imageUrl(type="file" name="imageUrl" class="form-control mb-4")
     
     button(type="submit" class="btn btn-outline-primary") Submit
 
