--- a/views/figurine_list.pug
+++ b/views/figurine_list.pug
@@ -5,7 +5,7 @@ block content
   h1= title
 
   each item in items
-    div(class="container")
+    div(class="container mb-4")
 
       img(src=item.imageUrl alt="Image")
       
