--- a/views/figurine_detail.pug
+++ b/views/figurine_detail.pug
@@ -9,14 +9,15 @@ block content
       h2= item.name
 
       div(class="d-flex flex-column") Dimensions
-        span Height (cm): #{item.height}
-        span Width (cm): #{item.width}
-        span Depth (cm): #{item.depth}
-        span Weight (kg): #{item.weight}
+        - const {height, width, depth} = item.dimensions
+        span= 'Height (cm):' + (height ? height : 'No information')
+        span= 'Width (cm):' + (width ? width : 'No information')
+        span= 'Depth (cm):' + (depth ? depth : 'No information')
+        span= 'Weight (kg):' + (item.weight ? item.weight : 'No information')
 
       div(class="d-flex flex-column")
-        span Category: item.category
-        span Age: item.age
+        span Category: #{item.category}
+        span Age: #{item.age}
 
       div
         span Manufacturer #{item.manufacturer}
