--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,10 +11,14 @@ html
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
     crossorigin="anonymous"
   )
+  link( 
+    rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+  )
 
-  div(class="container-fluid d-flex flex-row") 
+  div(class="container-fluid d-flex flex-row m-2") 
 
-    nav(class="col-1 mr-3")
+    nav(class="col-1 me-4")
       ul(class="nav d-flex flex-column")
         li.nav-item
           a(href='/category/all' class="nav-link") Categories
@@ -23,5 +27,5 @@ html
         li.nav-item
           a(href='/item/all' class="nav-link") Figurines 
     
-    main
+    main(class="col-md-auto")
       block content
