--- a/views/age_category_delete.pug
+++ b/views/age_category_delete.pug
@@ -9,7 +9,13 @@ block content
     ul(class="list-group mb-4")
       each item in items 
         li(class="list-group-item")
-          a(href=item.url) #{item.name} (#{ageCategory.min} - #{ageCategory.max} years old)
+
+          if (ageCategory.min && ageCategory.max)
+            a(href=item.url) #{item.name} (#{ageCategory.min} - #{ageCategory.max} years old)
+          else if(ageCategory.min && !ageCategory.max)
+            a(href=item.url) #{item.name} From #{ageCategory.min} years old 
+          else 
+            a(href="item-url") #{item.name} Up to #{ageCategory.max} years old
 
   else
     span There are no items for this category of age. You can delete it safely.
