--- a/views/figurine_form.pug
+++ b/views/figurine_form.pug
@@ -2,44 +2,50 @@ extends layout
 
 block content 
 
-  form(action="" method="POST" class="form d-flex flex-column gap-2" enctype="multipart/form-data")
+  h2=title
+   
+  div(class="card card-body")
+    form(action="" method="POST" class="form" enctype="multipart/form-data")
+      div(class="d-flex flex-row gap-4")
+      
+        div(class="col container")
+          label(for="name" class="form-label row") Name 
+            input(type="text" name="name" class="form-control" value=item ? item.name : null)
+          
+          label(for="age" class="form-label row") Age
+            select#age(name="age" class="form-select")
+              each option in ageOptions 
+                option(value=option.id) #{option.name}
 
-    label(for="name" class="form-label") Name 
-      input(type="text" name="name" class="form-control" value=item ? item.name : null)
-    
-    label(for="description" class="form-label") Description 
-      textarea(name="description" class="form-control" value=item ? item.description : null)
+          label(for="category" class="form-label row") Category
+            select#category(name="category" class="form-select")
+              each category in categoryOptions 
+                option(value=category.id) #{category.name}
+          
+          label(for="itemCountLeft" class="form-label row") Items in store
+            input#itemCountLeft(type="number" min=0 step=1 name="itemCountLeft" class="form-control")
+          
+          label(for="price" class="form-label row") Price 
+            input#price(type="number" min=0 step=0.01 name="price" class="form-control")
+          
 
-    label(for="age" class="form-label") Age
-    select#age(name="age" class="form-select")
-      each option in ageOptions 
-        option(value=option.id) #{option.name}
+          label(for="imageUrl" class="form-label row")
+            input#imageUrl(type="file" name="imageUrl" class="form-control mb-4")
+        
+        div(class='col container') 
+          label(for="description" class="form-label row") Height 
+            input#height(type="number" step=0.01 name="dimensions.height" class="form-control" value=item && item.dimensions ? item.dimensions.height : null)
+          label(for="width" class="form-label row") Width 
+            input#width(type="number" step=0.01 name="dimensions.width" class="form-control" value=item && item.dimensions ? item.dimensions.width : null)
+          label(for="depth" class="form-label row") Depth 
+            input#depth(type="number" step=0.01 name="dimensions.depth" class="form-control" value=item && item.dimensions ? item.dimensions.depth : null)
+          label(for="weight" class="form=label row") Weight
+            input#weight(type="number" step=0.01 name="weight" class="form-control" value=item ? item.weight : null)
 
-    label(for="category" class="form-label") Category
-    select#category(name="category" class="form-select")
-      each category in categoryOptions 
-        option(value=category.id) #{category.name}
-
-    fieldset(class="d-flex p-0 m-0 flex-column gap-2 container") Dimensions 
-      label(for="description" class="form-label") Height 
-        input#height(type="number" step=0.01 name="dimensions.height" class="form-control" value=item && item.dimensions ? item.dimensions.height : null)
-      label(for="width" class="form-label") Width 
-        input#width(type="number" step=0.01 name="dimensions.width" class="form-control" value=item && item.dimensions ? item.dimensions.width : null)
-      label(for="depth" class="form-label") Depth 
-        input#depth(type="number" step=0.01 name="dimensions.depth" class="form-control" value=item && item.dimensions ? item.dimensions.depth : null)
-      label(for="weight" class="form=label") Weight
-        input#weight(type="number" step=0.01 name="weight" class="form-control" value=item ? item.weight : null)
-    
-    label(for="itemCountLeft" class="form-label") Items in store
-      input#itemCountLeft(type="number" min=0 step=1 name="itemCountLeft" class="form-control")
-    
-    label(for="price" class="form-label") Price 
-      input#price(type="number" min=0 step=0.01 name="price" class="form-control")
-
-    label(for="imageUrl" class="form-label")
-      input#imageUrl(type="file" name="imageUrl" class="form-control mb-4")
-    
-    button(type="submit" class="btn btn-outline-primary") Submit
+      div.container 
+        label(for="description" class="form-label row") Description 
+          textarea(name="description" class="form-control" value=item ? item.description : null)
+        button(type="submit" class="btn btn-outline-primary row") Submit 
 
   if errors
     ul
