--- a/views/figurine_form.pug
+++ b/views/figurine_form.pug
@@ -23,28 +23,33 @@ block content
                 option(value=category.id) #{category.name}
           
           label(for="itemCountLeft" class="form-label row") Items in store
-            input#itemCountLeft(type="number" min=0 step=1 name="itemCountLeft" class="form-control")
+            input#itemCountLeft(type="number" min=0 step=1 name="itemCountLeft" class="form-control" value=item ? item.itemCountLeft : null)
           
-          label(for="price" class="form-label row") Price 
-            input#price(type="number" min=0 step=0.01 name="price" class="form-control")
-          
+          label(for="manufacturer" class="form-label row") Manufacturer
+            input#manufacturer(type="text" name="manufacturer" class="form-control mb-4" value=item ? item.manufacturer : null)
 
-          label(for="imageUrl" class="form-label row")
+          label(for="imageUrl" class="form-label row") Picture
             input#imageUrl(type="file" name="imageUrl" class="form-control mb-4")
         
         div(class='col container') 
           label(for="description" class="form-label row") Height 
             input#height(type="number" step=0.01 name="dimensions.height" class="form-control" value=item && item.dimensions ? item.dimensions.height : null)
+
           label(for="width" class="form-label row") Width 
             input#width(type="number" step=0.01 name="dimensions.width" class="form-control" value=item && item.dimensions ? item.dimensions.width : null)
+
           label(for="depth" class="form-label row") Depth 
             input#depth(type="number" step=0.01 name="dimensions.depth" class="form-control" value=item && item.dimensions ? item.dimensions.depth : null)
-          label(for="weight" class="form=label row") Weight
+
+          label(for="weight" class="form-label row") Weight
             input#weight(type="number" step=0.01 name="weight" class="form-control" value=item ? item.weight : null)
+
+          label(for="price" class="form-label row") Price 
+            input#price(type="number" min=0 step=0.01 name="price" class="form-control" value=item ? item.price : null)
 
       div.container 
         label(for="description" class="form-label row") Description 
-          textarea(name="description" class="form-control" value=item ? item.description : null)
+          textarea(name="description" class="form-control")= (item ? item.description : null) 
         button(type="submit" class="btn btn-outline-primary row") Submit 
 
   if errors
