--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -15,7 +15,7 @@ block content
 
       button(type="submit" class="btn btn-outline-primary") Submit changes
 
-  if errors
+  if errors.length
     span The following form fields contain validation errors: 
     
       ul 
