--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -8,10 +8,10 @@ block content
     div(class="card card-body") 
 
       label(for="name" class="form-label") Category name
-        input#name(type="text", name="name", value=category.name class="form-control")
+        input#name(type="text", name="name", value=category ? category.name : null class="form-control")
       
       label(for="Description" class="form-label") Description 
-        input#description(type="textarea", name="description" value=category.description class="form-control")
+        input#description(type="textarea", name="description" value=category ? category.description : null class="form-control")
 
       button(type="submit" class="btn btn-outline-primary") Submit changes
 
